@@ -272,6 +272,11 @@ operator|new
 name|SimpleOrderedMap
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|listEntries
+condition|)
+block|{
 name|String
 index|[]
 name|entries
@@ -292,11 +297,6 @@ operator|.
 name|length
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|listEntries
-condition|)
-block|{
 for|for
 control|(
 name|int
@@ -329,6 +329,21 @@ index|]
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+else|else
+block|{
+name|stats
+operator|.
+name|add
+argument_list|(
+literal|"entries_count"
+argument_list|,
+name|UninvertingReader
+operator|.
+name|getUninvertedStatsSize
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 return|return
 name|stats
